 * Import session: disable RockRidge if the previous session does not contain RR extensions.
   This fixes the problem with strange filenames if the new session is mounted via RR.
 * Fixed the --cdimage parameter.
 * Changed max copies from 99 to 999.
 * Improved session import dialog.
 * Properly default to DVD size in Video DVD project.
 * Fixed automatic multisession handling for DVD+RW media

0.12.1
Fixed compilation problems with older musepack library version.
Fixed compile problem with older gcc versions.
Enable verification checkbox for ISO9660 images in the CD writing dialog.
Do not report success even if audio project conversion failed.

0.12
Added "Mpeg Still" support to Video-CD Project
FreeBSD support (thanks to Adriaan De Groot)
Support for all global CD-Text fields with cdrecord.
Some GUI changes: cleaned up the action dialogs, moved the burnfree option to the global settings dialog
	since turning it off should be a very seldomly used task.
Added support for multiple copies to the projects.
Added missed VCD 3.0 track interpretation option for SVCD's
New Lame encoding plugin providing a proper configuration dialog.
Added Bookmarks to the file browser.
Fixed window layering problem with windowmanagers != kwm
Added KPart plugin which converts a list of audio files into one of the supported encoder formats.
Allow disabling of CD-Text reading in cd-copy to overcome problems with CD-Text on some drives.
Check CD-Text crc when copying
Fixed incorrect PBC order, PBC now should work on all "standalone" DVD Players
Fixed waittime bug for PBC infinite timeout.
Import Audio Cue files into an audio project.
It is now possible to open an iso image or an audio cue file just like a project file.
Create cue files for an audio CD ripped into one single file
Show writer buffer state in addition to fifo buffer when writing CDs.
Show device buffer state for DVD writing (does not work always yet)
Fixed read and save setting in VideoCD project.