@@ -14,6 +14,8 @@
  * Improved session import dialog.
  * Properly default to DVD size in Video DVD project.
  * Fixed automatic multisession handling for DVD+RW media
+ * Fixed handbook installation
+ * Fixed HAL backend: devices are properly removed now.
 
 0.12.1
 Fixed compilation problems with older musepack library version.
